--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             </div>
             <div class="image">
                 <img class="img1" src="img/Phone 13 1.png" alt="">
+                <img src="img/Phone 11 1.png" alt="" class="img_mobile">
             </div>
             <div class="box-1"></div>
             <div class="box-2"></div>
